--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "server": "json-server --watch ./api/db.json --port 3001"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@types/uuid": "^9.0.8",
+    "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-alpha.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
